<resources>
    <string name="app_name">Mnemonics for foreign word</string>
    <string name="quick_start">Быстрый старт</string>
    <string name="tutorial">Теория</string>
    <string name="exercises">Упражнения</string>
    <string name="statistics">Статистика</string>
    <string name="links">Ссылки</string>
    <string name="faq">FAQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_word">Следующее\n слово</string>
    <string name="word">Слово</string>
    <string name="timer">Таймер: 00:00:00</string>
    <string name="exit">Выход</string>
    <string name="next_couple">Следующая парочка</string>
    <string name="connection_fragment">Connection fragment</string>
    <string name="checkfragment">CheckFragment</string>
    <string name="check_yourself">Проверить себя</string>
</resources>