<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:background="@color/teal_200">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/quick_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_start" />

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial" />

        <Button
            android:id="@+id/exercises_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercises" />

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics" />

        <Button
            android:id="@+id/links_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/links" />

        <Button
            android:id="@+id/faq_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>