<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.exercises.connection.check_screen.presentation.view.CheckFragment">

    <ImageButton
        android:id="@+id/hint_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:src="@android:drawable/ic_menu_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/timer"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_button" />

    <TextView
        android:id="@+id/first_word_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Первое"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_word_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_word_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Второе"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_word_textview"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:minHeight="60dp"
        android:minWidth="135dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/check_yourself_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/check_yourself"
        app:layout_constraintBottom_toTopOf="@+id/next_couple_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/next_couple_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next_couple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>